src/objects/Apttus_DealMgr__DealPercentileRange__c.object
<CustomObject>
    <description>Represents the deal rating colors and their percentile ranges</description>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>APTS Ext ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__ColorCode__c</fullName>
        <description>The color hex code</description>
        <inlineHelpText>The color hex code</inlineHelpText>
        <label>Color Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__DealColor__c</fullName>
        <description>The deal color</description>
        <label>Deal Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Light Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Black Blue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__DealShape__c</fullName>
        <description>The shape associated with the band</description>
        <inlineHelpText>The shape associated with the band</inlineHelpText>
        <label>Deal Shape</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Circle</fullName>
                    <default>true</default>
                    <label>Circle</label>
                </value>
                <value>
                    <fullName>Triangle</fullName>
                </value>
                <value>
                    <fullName>Diamond</fullName>
                </value>
                <value>
                    <fullName>Square</fullName>
                </value>
                <value>
                    <fullName>Pentagon</fullName>
                </value>
                <value>
                    <fullName>Star</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__Description__c</fullName>
        <description>The description for the color band</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__PercentileFrom__c</fullName>
        <description>The percentile range from</description>
        <label>Percentile From</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__PercentileTo__c</fullName>
        <description>The percentile range to</description>
        <label>Percentile To</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__RangeName__c</fullName>
        <description>The range name</description>
        <label>Band Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__Sequence__c</fullName>
        <description>The percentile sequence</description>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Deal Color Band</label>
    <listViews>
        <fullName>Apttus_DealMgr__All</fullName>
        <columns>Apttus_DealMgr__Sequence__c</columns>
        <columns>Apttus_DealMgr__RangeName__c</columns>
        <columns>Apttus_DealMgr__DealColor__c</columns>
        <columns>Apttus_DealMgr__ColorCode__c</columns>
        <columns>Apttus_DealMgr__PercentileFrom__c</columns>
        <columns>Apttus_DealMgr__PercentileTo__c</columns>
        <columns>Apttus_DealMgr__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DR-{000000}</displayFormat>
        <label>Range Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Color Bands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>